[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
fern = { version = "0.6", features = ["date-based"] }
clap = { version = "4.4" }
yaml-rust = "0.4"
chrono = "0.4"
tokio = { version = "1.36", features = ["full"] }
dashmap = "5.5"
bytes = "1.5"
once_cell = "1.19.0"
constructor = {path = "../../macros/constructor"}

#加解密
aes = "0.7.5"
block-modes = "0.8.1"
hex-literal = "0.2.1"
rand = "0.8.4"
bytebuffer = "0.2.1"
base64 = "0.13.0"

[features]
default = []
net = []