[package]
name = "common"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#anyhow = "1.0"
#thiserror = "1.0"
log = "0.4"
fern = { version = "0.6", features = ["date-based"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.36", features = ["full"] }
dashmap = "5.5"
bytes = "1.5"
once_cell = "1.19.0"
serde = { version = "1", features = ["derive"] }
#serde_derive = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
constructor = { path = "../macros/constructor" }
cfg_lib = { path = "../macros/cfg_lib" }
exception = { path = "../exception" }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-native-tls", "default","chrono"] }
ctrlc = "3.4"
daemonize = "0.5"
users = "0.11"

#加解密
aes = "0.7.5"
block-modes = "0.8.1"
hex-literal = "0.2.1"
rand = "0.8.4"
bytebuffer = "0.2.1"
base64 = "0.13.0"

[dev-dependencies]
serde_json = "1.0.124"

[features]
default = []
net = []
mysqlx = ["sqlx/mysql", "sqlx/runtime-tokio-native-tls", "sqlx/default"]